--- a/view/user_function/member_signin.html
+++ b/view/user_function/member_signin.html
@@ -35,6 +35,10 @@
                     //    your app or not.
                     statusChangeCallback(response);
                 });
+
+		FB.Event.subscribe('auth.login', () => {
+		    checkLoginState();
+		});
             };
 
             // Load the SDK asynchronously
@@ -42,7 +46,7 @@
                 var js, fjs = d.getElementsByTagName(s)[0];
                 if (d.getElementById(id)) {return;}
                 js = d.createElement(s); js.id = id;
-                js.src = "https://connect.facebook.net/en_US/sdk.js";
+                js.src = "https://connect.facebook.net/zh_TW/sdk.js";
                 fjs.parentNode.insertBefore(js, fjs);
             }(document, 'script', 'facebook-jssdk'));
         </script>
@@ -51,7 +55,7 @@
             <div class="sign-wrap">
                 <div class="sign text-center">
                     <h2>登入</h2>
-                    <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="true" data-use-continue-as="true"></div>
+		    <fb:login-button data-auto-logout-link="true" data-size="large" data-button-type="login_with"></fb:login-button>
                     <hr class="text-sep-sm">
                     <div class="sign-block">
                         <label for="account">電子信箱</label>
