fix fbAsyncInit getLoginStatus behavior

--- a/view/user_function/member_signin.html
+++ b/view/user_function/member_signin.html
@@ -12,7 +12,7 @@
                     // 2. Logged into Facebook, but not your app ('not_authorized')
                     // 3. Not logged into Facebook and can't tell if they are logged into
                     //    your app or not.
-                    statusChangeCallback(response);
+                    console.log(response.status);
                 });
 
         		FB.Event.subscribe('auth.login', function() {
