keep resource/img cleeeeeeaaaaaan - content/index

--- a/view/content/index.html
+++ b/view/content/index.html
@@ -17,7 +17,7 @@
 			<div class="story-wrap">
 				<div class="story">
 					<div class="story-img-wrap">
-						<img class="story-img" src="resource/img/society.jpg" alt="Story 1 愛的釀皂">
+						<img class="story-img" src="resource/img/index/story/society.jpg" alt="Story 1 愛的釀皂">
 					</div>
 					<div class="story-text">
 						<h3>愛的釀皂</h3>
@@ -28,7 +28,7 @@
 				</div>
 				<div class="story">
 					<div class="story-img-wrap">
-						<img class="story-img" src="resource/img/farm.jpg" alt="Story 2 吾鄉小農">
+						<img class="story-img" src="resource/img/index/story/farm.jpg" alt="Story 2 吾鄉小農">
 					</div>
 					<div class="story-text">
 						<h3>吾鄉小農</h3>
@@ -39,7 +39,7 @@
 				</div>
 				<div class="story">
 					<div class="story-img-wrap">
-						<img class="story-img" src="resource/img/intern.jpg" alt="Story 3 社會企業">
+						<img class="story-img" src="resource/img/index/story/intern.jpg" alt="Story 3 社會企業">
 					</div>
 					<div class="story-text">
 						<h3>社會企業</h3>
