use icomoon instead of font-awesome entire file to reduce file size

--- a/view/component/nav/login_signup.html
+++ b/view/component/nav/login_signup.html
@@ -1,7 +1,7 @@
 					<li class="nav-main-item has-dropdown">
 						<a class="nav-main-link" href="javascript:void(0)">
 							註冊/登入
-							<i class="fa fa-angle-down"></i>
+							<span class="icon-angle-down"></span>
 						</a>
 						<ul class="nav-dropdown-menu">
 							<li class="nav-dropdown-item">
