--- a/view/content/contact.html
+++ b/view/content/contact.html
@@ -21,15 +21,18 @@
 					<hr class="text-sep-sm">
 					<div id="contact-info">
 						<p>
-							<i class="fa fa-phone fa-fw fa-lg"></i>
+							<span class="icon-phone"></span>
+							<span class="visuallyhidden">Phone</span>
 							{company_phone}
 						</p>
 						<p>
-							<i class="fa fa-envelope fa-fw fa-lg"></i>
+							<span class="icon-envelope"></span>
+							<span class="visuallyhidden">Email</span>
 							{company_email}
 						</p>
 						<p>
-							<i class="fa fa-map-marker fa-fw fa-lg"></i>
+							<span class="icon-map-marker"></span>
+							<span class="visuallyhidden">Address</span>
 							{company_address}
 						</p>
 					</div>
