--- a/view/content/partner.html
+++ b/view/content/partner.html
@@ -14,7 +14,7 @@
 						</p>
 						<a class="text-btn" href="http://www.shanhsien.org.tw/" target="_blank" rel="noopener">
 							暸解更多
-							<i class="fa fa-angle-right"></i>
+							<span class="icon-angle-right"></span>
 						</a>
 					</div>
 					<h3>
@@ -27,7 +27,7 @@
 						</p>
 						<a class="text-btn" href="https://www.facebook.com/pinganmipu/" target="_blank" rel="noopener">
 							暸解更多
-							<i class="fa fa-angle-right"></i>
+							<span class="icon-angle-right"></span>
 						</a>
 					</div>
 					<h3>
@@ -39,7 +39,7 @@
 						</p>
 						<a class="text-btn" href="http://atp.cs.gov.tw/rplace.php" target="_blank" rel="noopener">
 							暸解更多
-							<i class="fa fa-angle-right"></i>
+							<span class="icon-angle-right"></span>
 						</a>
 					</div>
 					<h3>
@@ -52,7 +52,7 @@
 						</p>
 						<a class="text-btn" href="https://www.facebook.com/maturalism/" target="_blank" rel="noopener">
 							暸解更多
-							<i class="fa fa-angle-right"></i>
+							<span class="icon-angle-right"></span>
 						</a>
 					</div>
 					<h3>
@@ -66,7 +66,7 @@
 						</p>
 						<a class="text-btn" href="http://www.tailosan.com/" target="_blank" rel="noopener">
 							暸解更多
-							<i class="fa fa-angle-right"></i>
+							<span class="icon-angle-right"></span>
 						</a>
 					</div>
 					<h3>
@@ -80,7 +80,7 @@
 						</p>
 						<a class="text-btn" href="https://www.facebook.com/taimalicustardapple/" target="_blank" rel="noopener">
 							暸解更多
-							<i class="fa fa-angle-right"></i>
+							<span class="icon-angle-right"></span>
 						</a>
 					</div>
 				</div>
