--- a/view/footer.html
+++ b/view/footer.html
@@ -52,28 +52,33 @@
 					聯絡我們
 				</p>
 				<p>
-					<i class="fa fa-phone fa-fw fa-lg"></i>
+					<span class="icon-phone"></span>
+					<span class="visuallyhidden">Phone</span>
 					<a class="footer-main-link" href="tel:{company_phone}">
 						{company_phone}
 					</a>
 				</p>
 				<p>
-					<i class="fa fa-envelope fa-fw fa-lg"></i>
+					<span class="icon-envelope"></span>
+					<span class="visuallyhidden">Email</span>
 					<a class="footer-main-link" href="mailto:{company_email}">
 						{company_email}
 					</a>
 				</p>
 				<p>
-					<i class="fa fa-map-marker fa-fw fa-lg"></i>
+					<span class="icon-map-marker"></span>
+					<span class="visuallyhidden">Address</span>
 					{company_address}
 				</p>
 			</div>
 			<div id="community">
 				<a class="footer-main-link" href="https://www.facebook.com/trisoap">
-					<i class="fa fa-facebook fa-fw fa-lg"></i>
+					<span class="icon-facebook"></span>
+					<span class="visuallyhidden">Facebook Fanpage</span>
 				</a>
 				<a class="footer-main-link" href="index.php?route=contact">
-					<i class="fa fa-envelope fa-fw fa-lg"></i>
+					<span class="icon-envelope"></span>
+					<span class="visuallyhidden">Contact Us</span>
 				</a>
 				<a class="footer-main-link" href="https://www.pinkoi.com/store/trisoap">
 					Pinkoi
