--- a/view/nav.html
+++ b/view/nav.html
@@ -21,7 +21,7 @@
 					<li class="nav-main-item has-dropdown">
 						<a class="nav-main-link" href="javascript:void(0)">
 							關於三三
-							<i class="fa fa-angle-down"></i>
+							<span class="icon-angle-down"></span>
 						</a>
 						<ul class="nav-dropdown-menu">
 							<li class="nav-dropdown-item">
@@ -49,7 +49,7 @@
 					<li class="nav-main-item has-dropdown">
 						<a class="nav-main-link" href="javascript:void(0)">
 							三三產品
-							<i class="fa fa-angle-down"></i>
+							<span class="icon-angle-down"></span>
 						</a>
 						<ul class="nav-dropdown-menu">
 							<li class="nav-dropdown-header">
@@ -63,7 +63,7 @@
 							<li class="nav-dropdown-item has-dropdown">
 								<a class="nav-main-link" href="javascript:void(0)">
 									單品
-									<i class="fa fa-angle-right"></i>
+									<span class="icon-angle-right"></span>
 								</a>
 								<ul class="nav-dropdown-submenu">
 									<li class="nav-dropdown-item">
@@ -81,7 +81,7 @@
 							<li class="nav-dropdown-item has-dropdown">
 								<a class="nav-main-link" href="javascript:void(0)">
 									旅用皂絲
-									<i class="fa fa-angle-right"></i>
+									<span class="icon-angle-right"></span>
 								</a>
 								<ul class="nav-dropdown-submenu">
 									<li class="nav-dropdown-item">
@@ -116,7 +116,7 @@
 					<li class="nav-main-item has-dropdown">
 						<a class="nav-main-link" href="javascript:void(0)">
 							異業合作
-							<i class="fa fa-angle-down"></i>
+							<span class="icon-angle-down"></span>
 						</a>
 						<ul class="nav-dropdown-menu">
 							<li class="nav-dropdown-item">
