--- a/view/head.html
+++ b/view/head.html
@@ -16,9 +16,10 @@
 		<title>{title}｜三三吾鄉手工皂 Trisoap</title>
 		<meta name="author" content="2017 Trisoap Team">
 		<meta name="description" content="{description}">
+		<meta name="theme-color" content="#F18C41">
 		<meta property="og:title" content="{title}｜三三吾鄉手工皂 Trisoap" >
 		<meta property="og:url" content="https://www.trisoap.com.tw">
 		<meta property="og:image" content="https://www.trisoap.com.tw/resource/img/index/index01.jpg">
 		<meta property="og:description" content="{description}" >
 		<link rel="shortcut icon" href="resource/img/misc/favicon.png">
-		<link rel="stylesheet" href="resource/font-awesome-4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="resource/icomoon/style.css">
