--- a/view/manage_ui/nav/nav_order.html
+++ b/view/manage_ui/nav/nav_order.html
@@ -21,7 +21,7 @@
                     <li class="nav-main-item has-dropdown">
                         <a class="nav-main-link" href="javascript:void(0)">
                             管理平台
-                            <i class="fa fa-angle-down"></i>
+                            <span class="icon-angle-down"></span>
                         </a>
                         <ul class="nav-dropdown-menu">
                             <li class="nav-dropdown-item">
@@ -59,7 +59,7 @@
                     <li class="nav-main-item has-dropdown">
                         <a class="nav-main-link" href="javascript:void(0)">
                             訂單管理
-                            <i class="fa fa-angle-down"></i>
+                            <span class="icon-angle-down"></span>
                         </a>
                         <ul class="nav-dropdown-menu">
                             <li class="nav-dropdown-item">
@@ -97,7 +97,7 @@
                     <li class="nav-main-item has-dropdown">
                         <a class="nav-main-link" href="javascript:void(0)">
                             [member_name]，您好
-                            <i class="fa fa-angle-down"></i>
+                            <span class="icon-angle-down"></span>
                         </a>
                         <ul class="nav-dropdown-menu">
                             <li class="nav-dropdown-item">
