add ver1.0 preloader animation

--- a/resource/css/trisoap.scss
+++ b/resource/css/trisoap.scss
@@ -49,17 +49,9 @@ h1, h2, h3, h4, h5, h6, p, span, div, a, label {
 	z-index: 10;
 }
 
-#preloader-canvas {
-	// ==========
-	// fallbacks
-	// ==========
-	// position: absolute;
-	// top: 50%;
-	// left: 50%;
-	// transform: translate(-50%, -50%);
+#preloader-content {
 	width: 250px;
 	height: 250px;
-	background-color: #000;
 }
 
 /* =========================================================================
