--- a/view/head_finish.html
+++ b/view/head_finish.html
@@ -1,6 +1,4 @@
 		<link rel="stylesheet" href="resource/dist/css/trisoap.css">
 	</head>
 	<body class="no-scroll">
-		<!-- <div id="preloader">
-			<canvas id="preloader-canvas"></canvas>
-		</div> -->
+		<div id="preloader"></div>
