set <picture> tag to use .webp images

--- a/view/component/jumbotron/index_flexslider.html
+++ b/view/component/jumbotron/index_flexslider.html
@@ -4,28 +4,40 @@
 					<li>
 						<div>
 							<a href="index.php?route=newyear">
-								<img src="resource/img/index/index01.jpg" alt="春節禮盒">
+								<picture>
+									<source srcset="resource/img/index/index01.webp" type="image/webp">
+									<img src="resource/img/index/index01.jpg" alt="春節禮盒">
+								</picture>
 							</a>
 						</div>
 					</li>
 					<li>
 						<div>
 							<a href="index.php?route=customize">
-								<img src="resource/img/index/index02.jpg" alt="客製化專區">
+								<picture>
+									<source srcset="resource/img/index/index02.webp" type="image/webp">
+									<img src="resource/img/index/index02.jpg" alt="客製化專區">
+								</picture>
 							</a>
 						</div>
 					</li>
 					<li>
 						<div>
 							<a href="index.php?route=about">
-								<img src="resource/img/index/index03.jpg" alt="三三吾鄉 Trisoap">
+								<picture>
+									<source srcset="resource/img/index/index03.webp" type="image/webp">
+									<img src="resource/img/index/index03.jpg" alt="三三吾鄉 Trisoap">
+								</picture>
 							</a>
 						</div>
 					</li>
 					<li>
 						<div>
 							<a href="index.php?route=trial" target="_blank" rel="noopener">
-								<img src="resource/img/index/index04.jpg" alt="試用皂免費申請中 Trial">
+								<picture>
+									<source srcset="resource/img/index/index04.webp" type="image/webp">
+									<img src="resource/img/index/index04.jpg" alt="試用皂免費申請中 Trial">
+								</picture>
 							</a>
 						</div>
 					</li>
