--- a/view/component/single_product/gallery_image.html
+++ b/view/component/single_product/gallery_image.html
@@ -1,3 +1,6 @@
-							<li data-thumb="{src}">
-								<img src="{src}">
+							<li data-thumb="{src}.jpg">
+								<picture>
+									<source srcset="{src}.webp" type="image/webp">
+									<img src="{src}.jpg">
+								</picture>
 							</li>
