--- a/view/content/about.html
+++ b/view/content/about.html
@@ -16,7 +16,10 @@
 					</h2>
 				</div>
 				<div id="about-concept-img-wrap">
-					<img id="about-concept-img" src="resource/img/about/about.jpg" alt="建皂希望 多方合作">
+					<picture>
+						<source srcset="resource/img/about/about.webp" type="image/webp">
+						<img id="about-concept-img" src="resource/img/about/about.jpg" alt="建皂希望 多方合作">
+					</picture>
 				</div>
 			</div>
 			<div id="about-team">
@@ -26,7 +29,10 @@
 					於是以社會企業的形式，串連社福團體與在地小農，靠著三方協力，一起朝同一目標與夢想前進。</p>
 				<div class="about-team-member">
 					<div class="about-team-member-img-wrap">
-						<img class="about-team-member-img" src="resource/img/about/member1.jpg" alt="CEO 尹又令 Pusher">
+						<picture>
+							<source srcset="resource/img/about/member1.webp" type="image/webp">
+							<img class="about-team-member-img" src="resource/img/about/member1.jpg" alt="CEO 尹又令 Pusher">
+						</picture>
 					</div>
 					<div class="about-team-member-text">
 						<h3 class="about-team-member-title">
@@ -45,7 +51,10 @@
 				</div>
 				<div class="about-team-member">
 					<div class="about-team-member-img-wrap">
-						<img class="about-team-member-img" src="resource/img/about/member2.jpg" alt="CMO 陳雨彤 MAGGY">
+						<picture>
+							<source srcset="resource/img/about/member2.webp" type="image/webp">
+							<img class="about-team-member-img" src="resource/img/about/member2.jpg" alt="CMO 陳雨彤 MAGGY">
+						</picture>
 					</div>
 					<div class="about-team-member-text">
 						<h3 class="about-team-member-title">
