--- a/view/content/brand_intro.html
+++ b/view/content/brand_intro.html
@@ -1,7 +1,10 @@
 		<main>
 			<div class="intro">
 				<div class="intro-img-wrap">
-					<img class="intro-img" src="resource/img/intro/cold.jpg" alt="手皂製法，堅持冷製">
+					<picture>
+						<source srcset="resource/img/intro/cold.webp" type="image/webp">
+						<img class="intro-img" src="resource/img/intro/cold.jpg" alt="手皂製法，堅持冷製">
+					</picture>
 				</div>
 				<div class="intro-text">
 					<h3>手皂製法，堅持冷製</h3>
@@ -22,7 +25,10 @@
 					</p>
 				</div>
 				<div class="intro-img-wrap">
-					<img class="intro-img" src="resource/img/intro/oil.jpg" alt="油品來源，天然安心">
+					<picture>
+						<source srcset="resource/img/intro/oil.webp" type="image/webp">
+						<img class="intro-img" src="resource/img/intro/oil.jpg" alt="油品來源，天然安心">
+					</picture>
 				</div>
 			</div>
 		</main>
