--- a/view/content/customize.html
+++ b/view/content/customize.html
@@ -1,5 +1,8 @@
 		<main>
 			<div id="customize-wrap">
-				<img id="customize-content-img" src="resource/img/customize/customize_content.jpg" alt="客製化方案與流程介紹">
+				<picture>
+					<source srcset="resource/img/customize/customize_content.webp" type="image/webp">
+					<img id="customize-content-img" src="resource/img/customize/customize_content.jpg" alt="客製化方案與流程介紹">
+				</picture>
 			</div>
 		</main>
