--- a/view/content/index.html
+++ b/view/content/index.html
@@ -4,7 +4,10 @@
 					<a class="hover-cover" href="index.php?route=newyear">
 						<span class="primary-btn">立即購買</span>
 					</a>
-					<img class="buy-now-img" src="resource/img/jumbotrons/newyear.jpg" alt="立即購買春節禮盒">
+					<picture>
+						<source srcset="resource/img/jumbotrons/newyear.webp" type="image/webp">
+						<img class="buy-now-img" src="resource/img/jumbotrons/newyear.jpg" alt="立即購買春節禮盒">
+					</picture>
 				</div>
 			</div>
 			<div class="slogan-wrap">
@@ -17,7 +20,10 @@
 			<div class="story-wrap">
 				<div class="story">
 					<div class="story-img-wrap">
-						<img class="story-img" src="resource/img/index/story/society.jpg" alt="Story 1 愛的釀皂">
+						<picture>
+							<source srcset="resource/img/index/story/society.webp" type="image/webp">
+							<img class="story-img" src="resource/img/index/story/society.jpg" alt="Story 1 愛的釀皂">
+						</picture>
 					</div>
 					<div class="story-text">
 						<h3>愛的釀皂</h3>
@@ -28,7 +34,10 @@
 				</div>
 				<div class="story">
 					<div class="story-img-wrap">
-						<img class="story-img" src="resource/img/index/story/farm.jpg" alt="Story 2 吾鄉小農">
+						<picture>
+							<source srcset="resource/img/index/story/farm.webp" type="image/webp">
+							<img class="story-img" src="resource/img/index/story/farm.jpg" alt="Story 2 吾鄉小農">
+						</picture>
 					</div>
 					<div class="story-text">
 						<h3>吾鄉小農</h3>
@@ -39,7 +48,10 @@
 				</div>
 				<div class="story">
 					<div class="story-img-wrap">
-						<img class="story-img" src="resource/img/index/story/intern.jpg" alt="Story 3 社會企業">
+						<picture>
+							<source srcset="resource/img/index/story/intern.webp" type="image/webp">
+							<img class="story-img" src="resource/img/index/story/intern.jpg" alt="Story 3 社會企業">
+						</picture>
 					</div>
 					<div class="story-text">
 						<h3>社會企業</h3>
