--- a/view/content/shopping_guide.html
+++ b/view/content/shopping_guide.html
@@ -15,13 +15,19 @@
 				<div id="guide-content">
 					<h3 id="shop-guide" class="guide-title">
 						如何購買
-						<img class="guide-icon" src="resource/img/guide/cash.png">
 						<!-- cash by Shmidt Sergey from the Noun Project -->
+						<picture>
+							<source srcset="resource/img/guide/cash.webp" type="image/webp">
+							<img class="guide-icon" src="resource/img/guide/cash.png">
+						</picture>
 					</h3>
 					<h5 class="guide-subtitle">
 						電話購買
-						<img class="guide-icon" src="resource/img/guide/phone.png">
 						<!-- Phone by Icons Bazaar from the Noun Project -->
+						<picture>
+							<source srcset="resource/img/guide/phone.webp" type="image/webp">
+							<img class="guide-icon" src="resource/img/guide/phone.png">
+						</picture>
 					</h5>
 					<p class="guide-text">
 						服務電話：
@@ -37,8 +43,11 @@
 					</p>
 					<h5 class="guide-subtitle">
 						網路購物
-						<img class="guide-icon" src="resource/img/guide/web.png">
 						<!-- Browser by Sergey Demushkin from the Noun Project -->
+						<picture>
+							<source srcset="resource/img/guide/web.webp" type="image/webp">
+							<img class="guide-icon" src="resource/img/guide/web.png">
+						</picture>
 					</h5>
 					<p class="guide-text">
 						三三吾鄉官方形象網站提供顧客詳細的商品介紹、生產合作單位以及相關產品資訊，可登入會員會進行選購。<br>
@@ -63,8 +72,11 @@
 
 					<h3 id="pay-guide" class="guide-title">
 						付款說明
-						<img class="guide-icon" src="resource/img/guide/wallet.png">
 						<!-- Wallet by anbileru adaleru from the Noun Project -->
+						<picture>
+							<source srcset="resource/img/guide/wallet.webp" type="image/webp">
+							<img class="guide-icon" src="resource/img/guide/wallet.png">
+						</picture>
 					</h3>
 					<h5 class="guide-subtitle">
 						信用卡付款
@@ -90,8 +102,11 @@
 
 					<h3 id="invoice-guide" class="guide-title">
 						發票說明
-						<img class="guide-icon" src="resource/img/guide/invoice.png">
 						<!-- Dollar Invoice by Stock Image Folio from the Noun Project -->
+						<picture>
+							<source srcset="resource/img/guide/invoice.webp" type="image/webp">
+							<img class="guide-icon" src="resource/img/guide/invoice.png">
+						</picture>
 					</h3>
 					<p class="guide-text">
 						發票可於購買時之特殊需求中填寫需要二聯式或三聯式之發票以及是否需要統一編號，若無填寫則由三三吾鄉官方依照法規程序開立發票。
@@ -101,8 +116,11 @@
 
 					<h3 id="return-guide" class="guide-title">
 						退換貨說明
-						<img class="guide-icon" src="resource/img/guide/return.png">
 						<!-- Package box return by arloenl evinniev from the Noun Project -->
+						<picture>
+							<source srcset="resource/img/guide/return.webp" type="image/webp">
+							<img class="guide-icon" src="resource/img/guide/return.png">
+						</picture>
 					</h3>
 					<p class="guide-text">
 						三三秉持社企精神，出貨前皆透過層層品質控管以及特殊篩選模式，替消費者把關產品的最高品質。如若發現商品於配送過程或其他因素造成瑕疵，三三亦遵照消費者保護法提供七天內退換貨服務。<br>
@@ -122,8 +140,11 @@
 
 					<h3 id="delivery-guide" class="guide-title">
 						配送說明
-						<img class="guide-icon" src="resource/img/guide/delivery.png">
 						<!-- package accept by unlimicon from the Noun Project -->
+						<picture>
+							<source srcset="resource/img/guide/delivery.webp" type="image/webp">
+							<img class="guide-icon" src="resource/img/guide/delivery.png">
+						</picture>
 					</h3>
 					<p class="guide-text">
 						一律交由中華郵政進行配送，涵蓋地區包含臺灣本島以及離島地區。若遇假日期間，配送時間還請耐心等候。<br>
