--- a/view/content/media.html
+++ b/view/content/media.html
@@ -3,19 +3,34 @@
 				<h2 class="main-content-title">國內外媒體報導</h2>
 				<div id="media-wrap">
 					<a class="media-link" target="_blank" rel="noopener" href="https://castnet.nctu.edu.tw/castnet/article/9986?issueID=630">
-						<img src="resource/img/media/castnet.png" alt="喀報">
+						<picture>
+							<source srcset="resource/img/media/castnet.webp" type="image/webp">
+							<img src="resource/img/media/castnet.png" alt="喀報">
+						</picture>
 					</a>
 					<a class="media-link" target="_blank" rel="noopener" href="http://www.storm.mg/lifestyle/200500">
-						<img src="resource/img/media/storm.png" alt="風傳媒">
+						<picture>
+							<source srcset="resource/img/media/storm.webp" type="image/webp">
+							<img src="resource/img/media/storm.png" alt="風傳媒">
+						</picture>
 					</a>
 					<a class="media-link" class="no-href" href="javascript:void(0)">
-						<img src="resource/img/media/hakkatv.png" alt="客家電視台">
+						<picture>
+							<source srcset="resource/img/media/hakkatv.webp" type="image/webp">
+							<img src="resource/img/media/hakkatv.png" alt="客家電視台">
+						</picture>
 					</a>
 					<a class="media-link" target="_blank" rel="noopener" href="https://www.peopo.org/news/316929">
-						<img src="resource/img/media/peopo.png" alt="Peopo 公民新聞">
+						<picture>
+							<source srcset="resource/img/media/peopo.webp" type="image/webp">
+							<img src="resource/img/media/peopo.png" alt="Peopo 公民新聞">
+						</picture>
 					</a>
 					<a class="media-link" target="_blank" rel="noopener" href="http://www.vita.tw/2016/09/blog-post_5.html">
-						<img src="resource/img/media/vita.png" alt="生命力新聞">
+						<picture>
+							<source srcset="resource/img/media/vita.webp" type="image/webp">
+							<img src="resource/img/media/vita.png" alt="生命力新聞">
+						</picture>
 					</a>
 				</div>
 			</div>
