--- a/view/content/partner.html
+++ b/view/content/partner.html
@@ -8,7 +8,10 @@
 						李勝賢文教基金會
 					</h3>
 					<div>
-						<img class="partner-logo" src="resource/img/partner/lee.png" alt="李勝賢文教基金會">
+						<picture>
+							<source srcset="resource/img/partner/lee.webp" type="image/webp">
+							<img class="partner-logo" src="resource/img/partner/lee.png" alt="李勝賢文教基金會">
+						</picture>
 						<p class="partner-text">
 							李勝賢文教基金會位於台東市區，是以服務憨兒為主的小型作業所，開辦愛心二手商店以及手工皂製作已有數年之久。裡頭的憨兒各個是作皂好手，只要提及作皂他們便展現優於一般人的專注力與專業程度。作皂不只為了成品，更在於每個憨兒在做好皂後的自信笑容。三三台東意象的每樣產品，在經過數個月的技術移轉與培訓後成功開發，每一顆手工皂，都是來自憨兒們歡笑天堂的純淨手作。
 						</p>
@@ -21,7 +24,10 @@
 						小農食在
 					</h3>
 					<div>
-						<img class="partner-logo" src="resource/img/partner/tsiao.png" alt="小農食在">
+						<picture>
+							<source srcset="resource/img/partner/tsiao.webp" type="image/webp">
+							<img class="partner-logo" src="resource/img/partner/tsiao.png" alt="小農食在">
+						</picture>
 						<p class="partner-text">
 							金絲森林渲染皂當中的金針，乃是由「小農食在」所提供。小農食在的金針花田，有別於一般種植於高山上，而是在台東縣池上鄉的平地栽培，因此在非高山金針產季時，也能夠提供最新鮮的金針花。市面上的金針花的加工品，為保有其鮮豔色澤與延長保存期間，經常添加二氧化硫，使含硫量超標，這些含硫金針，亦稱為「紅針、有毒金針」。而小農食在在製作過程中，完全不添加亞硫酸及其他添加物，是用於製作肥皂最好、安心的無硫金針。
 						</p>
@@ -59,7 +65,10 @@
 						臺東薑黃伯
 					</h3>
 					<div>
-						<img class="partner-logo" src="resource/img/partner/jiang.png" alt="臺東薑黃伯">
+						<picture>
+							<source srcset="resource/img/partner/jiang.webp" type="image/webp">
+							<img class="partner-logo" src="resource/img/partner/jiang.png" alt="臺東薑黃伯">
+						</picture>
 						<p class="partner-text">
 							臺東薑黃伯 – 台東樂山的薑黃淨土。<br>
 							臺東薑黃樂山野菜香草園，園區座落於台灣最後一塊淨土，其中含有多項礦物質又受太平洋水氣影響，成為種植的良好場所。臺東薑黃伯園區經過20年的耕耘，堅持無施灑農藥，以最優質的束骨秋鬱金為主，強調「純淨、優質、安心」，經過多項有機認證測驗通過，堅持帶給你最好的薑黃農產。
@@ -73,7 +82,10 @@
 						釋迦小羊牧場
 					</h3>
 					<div>
-						<img class="partner-logo" src="resource/img/partner/shaka.png" alt="釋迦小羊牧場">
+						<picture>
+							<source srcset="resource/img/partner/shaka.webp" type="image/webp">
+							<img class="partner-logo" src="resource/img/partner/shaka.png" alt="釋迦小羊牧場">
+						</picture>
 						<p class="partner-text">
 							釋迦小羊牧場 － 青綠糖蘋果的純真天堂。<br>
 							座落太麻里的「釋迦小羊牧場」。牧場在向陽面陽光充足的情況下，搭配上山泉水的灌溉，產出的台東二號釋迦碩大又飽滿。堅持產地自銷，從施肥、剪枝、開花、授粉、疏果、除草、套袋，親手處理每一個從小羊牧場產出的釋迦；對於各種細節的注重，以及對於果實品質安全的堅持，都可看出負責人陳志韋的認真和堅毅。高溫後的降雨容易使釋迦產生裂果，裂果賣相不佳，常是小農的困擾。三三向釋迦小羊牧場合作購買部分裂果，純手工取出果泥、果皮與果沙整顆果實充分利用，製作成三三臺東意象的原料之一。「裂果的釋迦，像是在開懷大笑的小羊。」
