--- a/resource/css/trisoap.scss
+++ b/resource/css/trisoap.scss
@@ -44,7 +44,7 @@ h1, h2, h3, h4, h5, h6, p, span, div, a, label {
 	height: 100%;
 	justify-content: center;
 	align-items: center;
-	background-color: #B29772;
+	background-color: #fff;
 	transition: opacity 1.5s ease;
 	z-index: 10;
 }
