deferring render-blocking stylesheets

--- a/view/head_finish.html
+++ b/view/head_finish.html
@@ -1,4 +1,4 @@
-		<link rel="stylesheet" href="resource/dist/css/trisoap.css">
+		<link rel="stylesheet" href="resource/dist/css/trisoap.css" defer>
 	</head>
 	<body class="no-scroll">
 		<div id="preloader"></div>
