--- a/view/head.html
+++ b/view/head.html
@@ -22,4 +22,4 @@
 		<meta property="og:image" content="https://www.trisoap.com.tw/resource/img/index/index01.jpg">
 		<meta property="og:description" content="{description}" >
 		<link rel="shortcut icon" href="resource/img/misc/favicon.png">
-		<link rel="stylesheet" href="resource/icomoon/style.css" defer>
+		<link rel="stylesheet" href="resource/icomoon/style.css" async defer>
