update nav items

--- a/view/nav.html
+++ b/view/nav.html
@@ -46,72 +46,33 @@
 							</li>
 						</ul>
 					</li>
-					<li class="nav-main-item has-dropdown">
-						<a class="nav-main-link" href="javascript:void(0)">
+					<li class="nav-main-item">
+						<a class="nav-main-link" href="index.php?route=products">
 							三三產品
-							<span class="icon-angle-down"></span>
 						</a>
-						<ul class="nav-dropdown-menu">
-							<li class="nav-dropdown-header">
-								中秋禮皂	已售罄
-							</li>
-							<li class="nav-dropdown-item">
-								<a class="nav-main-link" href="index.php?route=newyear">
-									春節禮盒
-								</a>
-							</li>
-							<li class="nav-dropdown-item has-dropdown">
-								<a class="nav-main-link" href="javascript:void(0)">
-									單品
-									<span class="icon-angle-right"></span>
-								</a>
-								<ul class="nav-dropdown-submenu">
-									<li class="nav-dropdown-item">
-										<a class="nav-main-link" href="index.php?route=soap&cat=yl">
-											宜蘭
-										</a>
-									</li>
-									<li class="nav-dropdown-item">
-										<a class="nav-main-link" href="index.php?route=soap&cat=tt">
-											台東
-										</a>
-									</li>
-								</ul>
-							</li>
-							<li class="nav-dropdown-item has-dropdown">
-								<a class="nav-main-link" href="javascript:void(0)">
-									旅用皂絲
-									<span class="icon-angle-right"></span>
-								</a>
-								<ul class="nav-dropdown-submenu">
-									<li class="nav-dropdown-item">
-										<a class="nav-main-link" href="index.php?route=soapstring&cat=yl">
-											宜蘭
-										</a>
-									</li>
-									<li class="nav-dropdown-item">
-										<a class="nav-main-link" href="index.php?route=soapstring&cat=tt">
-											台東
-										</a>
-									</li>
-								</ul>
-							</li>
-							<li class="nav-dropdown-item">
-								<a class="nav-main-link" href="index.php?route=shopping_guide">
-									購物須知
-								</a>
-							</li>
-						</ul>
 					</li>
 					<li class="nav-main-item">
 						<a class="nav-main-link" href="index.php?route=trial">
 							試用品申請
 						</a>
 					</li>
-					<li class="nav-main-item">
-						<a class="nav-main-link" href="index.php?route=customize">
-							客製化專區
+					<li class="nav-main-item has-dropdown">
+						<a class="nav-main-link" href="javascript:void(0)">
+							顧客專區
+							<span class="icon-angle-down"></span>
 						</a>
+						<ul class="nav-dropdown-menu">
+							<li class="nav-dropdown-item">
+								<a class="nav-main-link" href="index.php?route=shopping_guide">
+									購物須知
+								</a>
+							</li>
+							<li class="nav-dropdown-item">
+								<a class="nav-main-link" href="index.php?route=customize">
+									客製化專區
+								</a>
+							</li>
+						</ul>
 					</li>
 					<li class="nav-main-item has-dropdown">
 						<a class="nav-main-link" href="javascript:void(0)">
