disabled privacy law textarea

--- a/view/user_function/member_signup.html
+++ b/view/user_function/member_signup.html
@@ -70,7 +70,7 @@
                     </div>
                     <div class="sign-block">
                         <p>點選確認表示您已詳閱並同意 個人資料保護條款</p>
-                        <textarea id="personal-info-protect-act" rows="10"></textarea>
+                        <textarea id="personal-info-protect-act" rows="10" disabled></textarea>
                     </div>
                     <div class="sign-block">
                         <a class="promise-btn" href="javascript:void(0)" onclick="memberSignup()">確認</a>
