--- a/resource/css/trisoap.scss
+++ b/resource/css/trisoap.scss
@@ -96,7 +96,7 @@ header {
 
 /* 1.2. Jumbotron - Img */
 
-$jumbotron-list: "about", "brand_intro", "contact", "faq", "media", "moonfest", "newyear", "partner", "products", "shopping_guide", "single_product", "soap", "soapstring", "trial";
+$jumbotron-list: "about", "brand_intro", "contact", "faq", "gift_box", "media", "moonfest", "newyear", "partner", "products", "shopping_guide", "single_product", "soap", "soapstring", "trial";
 
 @each $item in $jumbotron-list {
 	#jumbotron-#{$item} {
@@ -292,13 +292,14 @@ $footer-line-height: 1.7;
 
 /* -------------------------------------------------------------------------
  * 1. 首頁｜Index Page
- * 1.1. 立即購買
+ * 1.1.0. 立即購買 - DEPRECATED
+ * 1.1.1. 活動影片 Activity videos
  * 1.2. 三個故事 Slogan
  * 1.3. 三個故事
  * -------------------------------------------------------------------------
  */
 
-/* 1.1. 立即購買 */
+/* 1.1.0. 立即購買 - DEPRECATED */
 
 $buy-now-btn-width: 44%;
 
@@ -361,6 +362,17 @@ $buy-now-btn-width: 44%;
 @media screen and (max-width: $media-breakpoint-mobile) {
 	.buy-now {
 		margin: 40px 15px;
+	}
+}
+
+/* 1.1.1. 活動影片 Activity videos */
+
+.act-video-wrap {
+	text-align: center;
+
+	iframe {
+		width: 46%;
+		height: auto;
 	}
 }
 
@@ -927,49 +939,72 @@ $buy-now-btn-width: 44%;
 .product {
 	box-sizing: border-box;
 	text-align: center;
-	color: $main-font-color;
+}
+
+.product-cover {
+	position: relative;
+	width: 100%;
+	overflow: hidden;
 }
 
 .product-cover-img {
+	display: block;
 	width: 100%;
 	height: auto;
 }
 
+.product-info {
+	margin: 1em 0;
+}
+
 .product-link {
 	text-decoration: none;
-	color: #000;
+	color: $main-font-color;
 	transition: color .3s;
-	font-size: 14px;
+	font-size: 16px;
 	font-weight: normal;
 	&:hover {
 		color: #666;
 	}
 }
 
-.product-intro {
-	font-weight: 200;
-	line-height: 1.7;
-	letter-spacing: 0.03em;
+.product-price {
+	color: $main-font-color;
 }
 
 // Laptop
 @media screen and (min-width: $media-breakpoint-mobile + 1px) {
 	.product {
-		width: 50%;
+		width: 33%;
 		padding: 40px 20px;
 	}
 
-	.product-cover {
+	.product-add-to-cart {
+		position: absolute;
+		bottom: 0;
 		width: 100%;
-		overflow: hidden;
+		margin-bottom: -4em;
+		padding: 1em 0;
+		background-color: rgba(0, 0, 0, 0.6);
+		transition: margin 0.3s;
+		a {
+			text-decoration: none;
+			color: #fff;
+		}
+	}
+
+	.product-cover:hover {
+		.product-cover-img {
+			transform: scale(1.1);
+		}
+
+		.product-add-to-cart {
+			margin-bottom: 0;
+		}
 	}
 
 	.product-cover-img {
-		display: block;	// dismiss inline-block default so .product-cover container has the same height as this img
 		transition: transform 0.3s;
-		&:hover {
-			transform: scale(1.1);
-		}
 	}
 }
 
@@ -978,6 +1013,10 @@ $buy-now-btn-width: 44%;
 	.product {
 		width: 100%;
 		padding: 10px 20px;
+	}
+
+	.product-add-to-cart {
+		display: none;
 	}
 }
 
